課題の再提出

--- a/profile/index.html
+++ b/profile/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>自己紹介</title>
+</head>
+
 <body>
-<title>自己紹介</title>
+    <h1>氏名</h1>
+    <p>石ケ森渉夢</p>
+    <h1>趣味・好きなこと</h1>
+    <ul>
+        <li>映画鑑賞</li>
+        <li>睡眠</li>
+    </ul>
 
-<h1>氏名</h1>
-<p>石ケ森渉夢</p>
-<h2>趣味・好きなこと</h2>
-<ul>
-<li>映画鑑賞</li>
-<li>睡眠</li>
-</ul>
-
-<img src="img/group_kids.png"alt="イラスト">
+    <img src="img/group_kids.png" alt="イラスト">
 
 </body>
+
 </html>
