自己紹介ページの装飾

--- a/profile/index.html
+++ b/profile/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>自己紹介</title>
+    <link rel="stylesheet" href="profile-style.css">
 </head>
 
 <body>
@@ -10,12 +11,19 @@
     <p>石ケ森渉夢</p>
     <h1>趣味・好きなこと</h1>
     <ul>
-        <li>映画鑑賞</li>
-        <li>睡眠</li>
+        <li id="bg-1">映画鑑賞</li>
+        <li id="bg-1">睡眠</li>
     </ul>
 
     <img src="img/group_kids.png" alt="イラスト">
 
 </body>
+
+<div class="text-0 bg-2">
+    <h1>新しいベットが欲しいです。</h1>
+</div>
+<div>
+    <p>セミダブルを買う予定。<span class="be-2">高い</span>よ。</p>
+</div>
 
 </html>
