表の再提出

--- a/table/table.html
+++ b/table/table.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--タイトル-->
-    <title>好きな熱帯魚</title>
+    <title>表の作成</title>
     <link rel="stylesheet" href="table-style.css">
 </head>
 <!--見出し1-->
@@ -28,7 +28,7 @@
             <td>
                 <img src="a1.jpg" alt="クーリーローチ" width="300" height="200">
             </td>
-            <td></td>
+
             <td>クーリーローチ</td>
             <td>Pangio kuhlii</td>
             <td>夜行性で大人しく、平均して<strong>5～10年</strong>ほど生きます。かわいいです。</td>
@@ -38,7 +38,7 @@
             <td>
                 <img src="a2.jpg" alt="コリドラス" width="300" height="200">
             </td>
-            <td></td>
+
             <td>コリドラス</td>
             <td>Corydoras</td>
             <td>大人しい個体が多く、平均して<strong>5～10年</strong>、飼育環境が良ければもっと長生きします。<p>長生きしてほしいです。</p>
@@ -50,7 +50,7 @@
             <td>
                 <img src="pureko.jpg" alt="プレコ" width="300" height="200">
             </td>
-            <td></td>
+
             <td>プレコ</td>
             <td>Hypostomus<p>plecostomus</p>
             </td>
@@ -63,7 +63,7 @@
             <td>
                 <img src="グッピー.jpg" alt="グッピー" width="300" height="200">
             </td>
-            <td></td>
+
             <td>グッピー</td>
             <td>Poecilia reticulata</td>
             <td>臆病な個体が多く、数匹の飼育でも群泳がみられます。<p>寿命は平均して<strong>1年半程度</strong>で他の魚と比べると短いですが、目を離すと爆発的に増えるのでほんっといい迷惑です。</p>
@@ -74,14 +74,17 @@
             <td>
                 <img src="ベタ.jpg" alt="グッピー" width="300" height="200">
             </td>
-            <td></td>
+
             <td>ベタ</td>
             <td>Betta splendens</td>
-            <td>攻撃的な個体が殆どで、多頭飼いすると冗談にならないくらいの喧嘩を始めます。<P>寿命は平均して<strong>3年～5年</strong>で、個体によっては冗談にならないくらいの金額差が生まれます。</p></td>
+            <td>攻撃的な個体が殆どで、多頭飼いすると冗談にならないくらいの喧嘩を始めます。<P>寿命は平均して<strong>3年～5年</strong>で、個体によっては冗談にならないくらいの金額差が生まれます。</p>
+            </td>
         </tr>
 
     </table>
-    
+
 
 
 </body>
+
+</html>
