--- a/profile/index.html
+++ b/profile/index.html
@@ -16,14 +16,14 @@
     </ul>
 
     <img src="img/group_kids.png" alt="イラスト">
-
+    
+    <div class="text-0 bg-2">
+        <h1>新しいベットが欲しいです。</h1>
+        <p>最近疲れがとれません。</p>
+    </div>
+    <p>セミダブルを買う予定。<span class="be-2">高い</span>よ。</p>
 </body>
 
-<div class="text-0 bg-2">
-    <h1>新しいベットが欲しいです。</h1>
-</div>
-<div>
-    <p>セミダブルを買う予定。<span class="be-2">高い</span>よ。</p>
-</div>
+
 
 </html>
