--- a/form/form.html
+++ b/form/form.html
@@ -13,35 +13,35 @@
     <p>以下の情報を入力し、確認ボタンを押してください。</p>
     <form action="#" method="post" enctype="multipart/form-data">
         <fieldset>
-        <legend>お客様情報</legend>
-        性:<input type="text" name="last_name"><br>
-        名:<input type="text" name="farst_name"><br>
-        住所:<input type="email" name="address"><br>
-        メールアドレス:<input type="email" name="user_email"><br>
-        電話番号:<input type="tel" name="user_tel"><br>
-        生年月日:<input type="date" name="birthday" value="1999-01-01"><br>
-        年齢:<input type="number" name="age" min="0" max="150">歳<br>
-        性別: <label><input type="radio" name="gender" value="0">男</label>
-        <label><input type="radio" name="gender" value="1">女</label>
-        <label><input type="radio" name="gender" value="2">その他</label><br>
+            <legend>お客様情報</legend>
+            性:<input type="text" name="last_name"><br>
+            名:<input type="text" name="first_name"><br>
+            住所:<input type="text" name="address"><br>
+            メールアドレス:<input type="email" name="user_email"><br>
+            電話番号:<input type="tel" name="tel"><br>
+            生年月日:<input type="date" name="birthday" value="1990-01-01"><br>
+            年齢:<input type="number" name="age" min="0" max="150">歳<br>
+            性別: <label><input type="radio" name="gender" value="0">男</label>
+            <label><input type="radio" name="gender" value="1">女</label>
+            <label><input type="radio" name="gender" value="2">その他</label><br>
         </fieldset>
         <fieldset>
             <legend>パスワード</legend>
             英数字8文字以上で入力してください。
-            <input type="password" name="user_pw"><br>
+            <input type="password" name="password"><br>
             確認のためもう一度入力してください。
-            <input type="password" name="user_confirm"><br>
+            <input type="password" name="password_confirm"><br>
         </fieldset>
         <fieldset>
             <legend>希望メールマガジン</legend>
-            <input type="checkbox" name="magazin" value="1">IT</label>
+            <label><input type="checkbox" name="magazin" value="1">IT</label>
             <label><input type="checkbox" name="magazin" value="2">営業</label>
             <label><input type="checkbox" name="magazin" value="3">接客</label>
-            <label><input type="checkbox" name="magazin" value="4">医療</label>
+            <label><input type="checkbox" name="magazin" value="4">医療</label><br>
         </fieldset>
         <fieldset>
             <legend>利用規約</legend>
-            <a href="terms.html">利用規約を確認する</a><br>
+            <a href="terms.html" target="_black" id="terms_size">利用規約を確認する</a><br>
             <label><input type="checkbox" name="terms" value="agree">規約に同意する</label>
         </fieldset>
         <button type="reset">内容をクリアする</button>
