--- a/form/register.html
+++ b/form/register.html
@@ -9,31 +9,81 @@
 </head>
 
 <body>
-    <form action="#" method="post">
-    <form action="#" method="get">
     <p>必要事項を入力の上、送信ボタンを押してください。</p>
-    <form action="#" method="post" enctype="multipart/form-data">
-        ID<span>必須</span>（メールアドレス）<input type="email" name="email" size="30"><label><input type="checkbox" name="pw_open">パスワードを表示する</label><br>
-        パスワード<input type="password" name="user_pw" size="30" minlength="8" required><label><input type="checkbox" name="gender" value="other">パスワードを表示する</label><br>
-        氏名
-        性<input type="text" name="last_name" placeholder="盛岡"required>
-        名<input type="text" name="farst_name" placeholder="太郎"required><br>
-        住所
-        〒<input type="text" name="yuubin" size="8"><br>
-          <input type="text" name="bannti"placeholder="番地"><br>
-          <input type="text" name="tatemonomei"placeholder="建物名"><br>
+    <form action="#" method="post">
+        <table>
+            <tbody>
+                <tr>
+                    <th>ID<span class="b">必須</span><span class="a">（メールアドレス）</span></div></th>
+                    <td>
+                        <input type="email" name="user_email" size="30" required
+                            placeholder="例：xxx@morijyobi.ac.jp"><br>
+                    </td>
+                </tr>
+                <tr>
+                    <th>パスワード<span class="b">必須</span></th>
+                    <td>
+                        <input type="password" name="user_pass" size="30" minlength="8" required>
+                        <input type="checkbox" name="check">パスワードを表示する<br>
+                    </td>
+                </tr>
+                <tr>
+                    <th>氏名<span class="b">必須</span></th>
+                    <td>
+                        性:<input type="text" name="last_name" placeholder="例：盛岡" required>
+                        名:<input type="text" name="farst_name" placeholder="太郎" required><br>
+                    </td>
+                </tr>
+                <tr>
+                    <th>住所</th>
+                    <td>
+                        〒<input type="text" name="postcode" size="8" value="020-0021" readonly><br>
+                        <input type="text" name="address" value="岩手県盛岡市中央通3丁目" readonly><br>
+                        <input type="text" name="housenumber" placeholder="番地"><br>
+                        <input type="text" name="bldg" placeholder="建物名" size="30"><br>
+                    </td>
+                </tr>
+                <tr>
+                    <th>携帯電話番号<span class="b">必須</span><span class="a"> (ハイフンなし)<span></th>
+                    <td><input type="tel" name="user_tel" required><br></td>
+                </tr>
+                <th>学科・学年<span class="b">必須</span></th>
+                <td>
+                    学科：<select name="gakka" required>
+                        <option value="">学科を選択してください</option>
+                        <option value="A">システム化</option>
+                        <option value="B">ビジネス化</option>
+                        <option value="O">デザイン科</option>
+                    </select>
+                    学年：<select name="school_year" required>
+                        <option value="">学年を選択してください</option>
+                        <option value="one">1年</option>
+                        <option value="two">2年</option>
+                        <option value="three">3年</option>
+                        <option value="four">4年</option>
+                    </select>
+                </td>
+                <tr>
+                    <th>お得な情報・クーポン<span class="b">必須</span></th>
 
-        電話番号(ハイフンなし)<input type="tel" name="dennwabanngou"required><br>
-        学科・学年 <select name="gakka" required>
-            <option value="">学科を選択してください</option>
-            <option value="A">システム化</option>
-            <option value="B">ビジネス化</option>
-            <option value="O">デザイン科</option>
-        お得な情報・クーポン<input type="radio" name="check" required><br>
-        <button type="submit">送信</button>
-        <button type="reset">リセット</button>
-        
+                    <td>
+                        <label><input type="radio" name="coupon" value="yes" required>受け取る</label>
+                        <label><input type="radio" name="coupon" value="no">受け取らない</label><br>
+                    </td>
+                </tr>
+                <tr>
+                    <th>ご意見・ご要望 <span class="a">(200文字以内でご記入ください)</span></th>
+                    <td><textarea name="request" cols="50" rows="10" maxlength="200"></textarea><br></td>
+                </tr>
+
+            </tbody>
+        </table>
+        <tr>
+            <td><button type="reset">入力内容をクリアする</button></td>
+            <td><button type="submit">送信</button></td>
+        </tr>
     </form>
+
 </body>
 
 </html>
