form　課題の提出

--- a/form/register.html
+++ b/form/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="register-style.css">
+    <link rel="stylesheet" href=>
     <title>登録フォーム</title>
 </head>
 
@@ -14,7 +14,8 @@
         <table>
             <tbody>
                 <tr>
-                    <th>ID<span class="b">必須</span><span class="a">（メールアドレス）</span></div></th>
+                    <th>ID<span class="b">必須</span><span class="a">（メールアドレス）</span>
+                    </th>
                     <td>
                         <input type="email" name="user_email" size="30" required
                             placeholder="例：xxx@morijyobi.ac.jp"><br>
