--- a/form/register.html
+++ b/form/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=>
+    <link rel="stylesheet" href="register-style.css">
     <title>登録フォーム</title>
 </head>
 
@@ -25,7 +25,7 @@
                     <th>パスワード<span class="b">必須</span></th>
                     <td>
                         <input type="password" name="user_pass" size="30" minlength="8" required>
-                        <input type="checkbox" name="check">パスワードを表示する<br>
+                        <label><input type="checkbox" name="check">パスワードを表示する</label><br>
                     </td>
                 </tr>
                 <tr>
